[package]
name = "notebackend"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1"
fs2 = "0.4"
git2 = "0.13"
once_cell = "1"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
varbincode = "0.1"
tempfile = "3"

[dev-dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1" }