[package]
name = "notebackend"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1"
dirs = "3"
dissimilar = "1"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty"] }
fs2 = "0.4"
libloading = "0.6"
notebackend_types = { path = "../notebackend_types" }
once_cell = "1"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tempfile = "3"

[dev-dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1" }