[package]
name = "notebackend"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1"
dirs = "3"
dissimilar = "1"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "humantime", "atty"] }
fs2 = "0.4"
hex = "0.4"
libloading = "0.6"
locale_config = "0.3"
notebackend_types = { path = "../notebackend_types" }
once_cell = "1"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = { version = "1" }
tempfile = "3"
base64 = "0.13"
scrypt = { version = "0.6", optional = true }
sha-1 = "0.9"
rand = { version = "0.8", optional = true }
aes-gcm-siv = { version = "0.9", optional = true }

[features]
encrypt = ["aes-gcm-siv", "scrypt", "rand"]
default = ["encrypt"]

[dev-dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1" }